<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="Username">Username: </string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="Email">Email: </string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="confirm_pass">confirm password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="continue_gg">Continue with Google</string>
    <string name="back">Back</string>
    <string name="forgot_pass">Forgot password? </string>
    <string name="reset_pass">Reset password</string>
    <string name="wait_loading">Wait a minute...</string>
    <string name="success">Success</string>
    <string name="resetpw_ment">Enter your username or email address and we will send you instructions on how to create a new password.</string>
    <string name="newpassword">new password</string>
    <string name="sunset">Sun set</string>
    <string name="sunrise">Sun rise</string>
    <string name="uv_index">UV Index</string>
    <string name="humidity">Humidity</string>
    <string name="_0">0</string>
    <string name="low">Low</string>
    <string name="user_image">User Image</string>
    <string name="hi">Hi,</string>
    <string name="weather_image">Weather Image</string>
    <string name="sample_mostly_sunny">Mostly sunny</string>
    <string name="sample_c">- - °C</string>
    <string name="sample_degrees">- - ° / - - °</string>
    <string name="sample_percent">%</string>
    <string name="home">Home</string>
    <string name="maps">Map</string>
    <string name="admin">Account</string>
    <string name="chart">Chart</string>
    <string name="celsius">°C</string>
    <string name="mm">mm</string>
    <string name="rainfall">Rainfall</string>
    <string name="wind_speed">Wind speed</string>
    <string name="km_h">km/h</string>
    <string name="mapbox_access_token">sk.eyJ1IjoicGF0dXMiLCJhIjoiY2w5NnFuaWE4MDVlMTN2cGp6MnZzcGZuYSJ9.FseUDG-zlpql4XkRhJTe5A</string>
    <string name="device_icon">Device Icon</string>
    <string name="feedback">Feedback</string>
    <string name="overall">Overall: </string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain">Rain</string>
    <string name="degree">Degree: </string>
    <string name="hotter">Hotter</string>
    <string name="true_degree">True in reality</string>
    <string name="colder">Colder</string>
    <string name="wind">Wind: </string>
    <string name="windier">Windier</string>
    <string name="less_windy">Less windy</string>
    <string name="other">Other: </string>
    <string name="rainbow">Rainbow</string>
    <string name="tornado">Tornado</string>
    <string name="storm">Storm</string>
    <string name="submit">Send feedback</string>
    <string name="history">See other feedback</string>
    <string name="sending_time">Sending time: </string>
    <string name="join">Joined on:</string>
    <string name="attribute">Attribute</string>
    <string name="timeframe">Timeframe</string>
    <string name="show">Show</string>
    <string name="ending">Ending</string>

</resources>