<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    >

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="560dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/viewpager_bkg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/robotobold"
            android:textSize="32dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_greenlv1"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/resetpw_ment"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/lightgreen"
            android:textSize="14dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/noti_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:paddingTop="2dp"
            android:textSize="14dp"
            android:textColor="#FF0000"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/repw_username"
            android:padding="8dp"
            android:hint="@string/username"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/repw_email"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/repw_password"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/repw_confirm"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <Button
            android:id="@+id/resetpw_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/reset_pass"
            android:textColor="@color/dark_greenlv1"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/robotobold"/>
        <Button
            android:id="@+id/back_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textColor="@color/dark_greenlv1"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/robotobold"/>
    </LinearLayout>

</RelativeLayout>