<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">
    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/bg_primary" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"></View>
    </LinearLayout>
    <TextView
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gvtime"
        android:text="@string/admin"
        android:textColor="@color/greenlv2"
        android:textSize="80dp"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_acc"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="205dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/account_profile_icon" />
    <TextView
        android:id="@+id/tv_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="20dp"
        android:layout_below="@id/img_acc"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18dp"
        android:layout_toEndOf="@id/tv_usr"
        android:layout_below="@id/img_acc"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="33dp" />
    <ImageView
        android:id="@+id/iv_u"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:src="@color/darker_grey"
        android:layout_below="@id/tv_usr" />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="20dp"
        android:layout_below="@id/tv_usr"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp" />
    <TextView
        android:id="@+id/user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18dp"
        android:layout_toEndOf="@id/tv_usr"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="53dp" />
    <ImageView
        android:id="@+id/iv_e"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:src="@color/darker_grey"
        android:layout_below="@id/tv_email" />
    <TextView
        android:id="@+id/tv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="20dp"
        android:layout_below="@id/tv_email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp" />
    <TextView
        android:id="@+id/user_first"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="18dp"
        android:layout_toEndOf="@id/tv_usr"
        android:layout_below="@id/user_mail"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="53dp" />
    <ImageView
        android:id="@+id/iv_f"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:src="@color/darker_grey"
        android:layout_below="@id/tv_first" />
    <Button
        android:layout_width="160dp"
        android:id="@+id/send_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text="@string/submit"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_below="@id/iv_f">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/history_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_toEndOf="@id/send_btn"
        android:text="@string/history"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_below="@id/iv_f">
    </Button>

</RelativeLayout>