<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPass"
    android:background="@drawable/mainbg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="356dp"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/viewpager_bkg">
        <TextView
            android:id="@+id/noti_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/robotobold"
            android:textSize="32dp"
            android:textColor="@color/dark_greenlv1"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/noti_account1"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/resetpw_ment"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/lightgreen"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/noti_account"
            app:layout_constraintStart_toStartOf="@+id/noti_account"
            app:layout_constraintTop_toBottomOf="@+id/noti_account" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/repw_username"
            android:padding="8dp"
            android:hint="@string/username"
            android:drawableLeft="@drawable/baseline_person_2_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg"
            app:layout_constraintEnd_toEndOf="@+id/noti_account1"
            app:layout_constraintStart_toStartOf="@+id/noti_account1"
            app:layout_constraintTop_toBottomOf="@+id/noti_account1"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible"
            android:indeterminateTint="@color/greenlv3"
            app:layout_constraintBottom_toBottomOf="@+id/resetpw_button"
            app:layout_constraintEnd_toEndOf="@+id/resetpw_button"
            app:layout_constraintStart_toStartOf="@+id/resetpw_button"
            app:layout_constraintTop_toTopOf="@+id/resetpw_button"/>
        <Button
            android:id="@+id/resetpw_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/reset_pass"
            android:textColor="@color/dark_greenlv1"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/robotobold"
            app:layout_constraintEnd_toEndOf="@+id/repw_username"
            app:layout_constraintStart_toStartOf="@+id/repw_username"
            app:layout_constraintTop_toBottomOf="@+id/repw_username"/>
        <Button
            android:id="@+id/back_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textColor="@color/dark_greenlv1"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/robotobold"
            app:layout_constraintEnd_toEndOf="@+id/resetpw_button"
            app:layout_constraintStart_toStartOf="@+id/resetpw_button"
            app:layout_constraintTop_toBottomOf="@+id/resetpw_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <WebView
        android:id="@+id/web_reset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
</RelativeLayout>