<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChartFragment">

    <include layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/attribute"
        android:textColorHint="@color/greenlv2"
        app:boxBackgroundColor="@color/greenlightmax"
        app:boxStrokeColor="@color/greenlv3"
        app:hintTextColor="@color/greenlv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@id/textInputLayout">

        <AutoCompleteTextView
            android:id="@+id/drv_attribute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/timeframe"
            android:textColorHint="@color/greenlv2"
            app:boxBackgroundColor="@color/greenlightmax"
            app:boxStrokeColor="@color/greenlv3"
            app:hintTextColor="@color/greenlv3"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/drv_timeframe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="0dp"
            android:hint="@string/ending"
            android:textColorHint="@color/greenlv2"
            app:boxBackgroundColor="@color/greenlightmax"
            app:boxStrokeColor="@color/greenlv3"
            app:hintTextColor="@color/greenlv3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_endingday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/show"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container1" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShow" />


</androidx.constraintlayout.widget.ConstraintLayout>